styles/style.css
/* General resets */
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

:root {
  --primary-font: 'Roboto', sans-serif;
  --primary-color: #01213f;
  --secondary-color: #c48b98;
}

body {
  font-family: var(--primary-font);
  max-width: 100vw;
}

li {
  list-style: none;
}

a {
  color: inherit;
  text-decoration: none;
}

/* Mobile First: */
.header-main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 250px;
  font-size: 1.375rem;
}

.logo-header {
  width: 115px;
  margin-bottom: 35px;
}

.nav-main {
  height: 40%;
}

.nav-list {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  text-align: center;
  text-transform: uppercase;
}

.banner {
  height: 400px;
  background: #01213f;
  color: #ffffff;
  text-transform: uppercase;
  padding: 50px 20px;
}

.banner-content {
  border: solid 8px #fff;
  height: 100%;
  max-width: 560px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 0 auto;
}

.banner-heading {
  font-size: 2.8125rem;
  font-weight: 500;
}

.banner-savings {
  font-size: 2.375rem;
  font-weight: 400;
}

.banner-cta {
  font-family: var(--primary-font);
  width: 245px;
  height: 75px;
  background: none;
  color: #c48b98;
  border: solid 4px#C48B98;
  font-size: 1.375rem;
  font-weight: 500;
  text-transform: uppercase;
  margin-top: 35px;
}

.products {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 22px;
}

.product {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  max-width: 375px;
  margin-bottom: 30px;
}

.product:last-of-type {
  margin-bottom: 0;
}

.product-info {
  box-shadow: 0 2px 10px rgb(221, 221, 221);
  border-radius: 0 0 5px 5px;
  padding: 25px 35px;
  width: 100%;
}

.product-img {
  max-width: 100%;
  height: 325px;
}

.product-name {
  font-size: 2.375rem;
  font-weight: 400;
  text-transform: uppercase;
}

.product-description {
  font-size: 1.375rem;
  font-weight: 300;
  line-height: 1.25;
  display: none;
}

.product-details {
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
  margin: 25px 0 15px 0;
}

.old-price {
  font-size: 1.75rem;
  font-weight: 300;
  color: #8c8c8c;
  text-decoration: line-through;
  text-decoration-color: #8c8c8c77;
}

.new-price {
  font-size: 2rem;
  font-weight: 300;
}

.favorite-icon,
.cart-icon {
  cursor: pointer;
  width: 40px;
  height: 40px;
  border: none;
}

.favorite-icon {
  background: url(./images/heart-icon.svg) no-repeat center;
  background-size: auto;
}

.cart-icon {
  background: url(./images/cart-icon.svg) no-repeat center;
  background-size: auto;
}

.footer-main {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  height: 680px;
  padding: 50px;
  background: #f9f9f9;
}

.footer-links {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 50%;
}

.nav-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 25px;
}

.nav-section-heading {
  font-size: 1rem;
  font-weight: 400;
  text-transform: uppercase;
  margin: 20px 0;
}

.nav-list-footer {
  text-align: center;
}

.nav-link-footer {
  font-size: 0.9375rem;
  font-weight: 300;
  margin-bottom: 10px;
}

.logo-footer {
  max-width: 50px;
}

@media only screen and (min-width: 680px) {
  .header-main {
    height: 110px;
    padding: 25px 50px;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
  }

  .logo-header {
    margin: 0;
  }

  .nav-list {
    flex-direction: row;
    width: 360px;
  }

  .banner {
    height: 460px;
  }

  .banner-heading {
    font-size: 4.5rem;
    font-weight: 400;
  }

  .banner-savings {
    font-size: 3.125rem;
  }

  .banner-cta {
    margin-top: 50px;
  }

  .footer-main {
    height: 300px;
  }

  .footer-links {
    width: 100%;
    flex-direction: row;
    justify-content: space-between;
  }

  .nav-section {
    align-items: flex-start;
  }

  .nav-list-footer {
    text-align: left;
  }
}

@media only screen and (min-width: 800px) {
  .products {
    padding: 50px;
  }

  .product {
    flex-direction: row;
    margin-bottom: 50px;
  }

  .product:nth-child(even) {
    flex-direction: row-reverse;
  }

  .product-img {
    width: 400px;
  }

  .product-info {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 325px;
    min-width: 400px;
  }

  .product-description {
    display: block;
    margin-top: 10px;
  }
}

@media only screen and (min-width: 1200px) {
  .header-main {
    padding: 25px 75px;
  }
}

